xpano (0.3.1-0ubuntu1~{{ DISTRIBUTION }}) {{ DISTRIBUTION }}; urgency=low

  * Initial release.

 -- Tomas Krupka <tomas@krupkat.cz>  Thu, 01 Sep 2022 10:09:07 +0200